# Animal-Crossing

./: .gitignore  .gitmodules  README.md  build_pc.sh  configure.py
include/: ac_airplane.h  ac_ant.h  ac_ball.h  ac_bee.h  ac_boat_demo.h  ac_effectbg.h  ac_field_draw.h  ac_furniture.h  ac_fuusen.h  ac_garagara.h  ac_groundhog_control.h  ac_gyo_kage.h  ac_gyo_release.h  ac_gyoei.h  ac_house_clock.h  ac_insect_h.h  ac_kamakura_indoor.h  ac_lighthouse_switch.h  ac_misin.h  ac_museum_fish_priv.h  ac_museum_insect_priv.h  ac_my_room.h  ac_npc.h  ac_npc_p_sel.h  ac_npc_rtc.h  ac_radio.h  ac_set_npc_manager.h  ac_shop_goods.h  ac_shrine.h  ac_snowman.h  ac_uki.h  ac_weather.h  bg_item.h  ef_effect_control.h  graph.h  m_banti.h  m_catalog_ovl.h  m_cpwarning_ovl.h  m_demo.h  m_design_ovl.h  (+12 more)
include/JSystem/JKernel/: JKRHeap.h
include/JSystem/JSupport/: JSUStreamEnum.h
include/PR/: gbi.h
include/dolphin/: gx.h
include/dolphin/gx/: GXVert.h
include/jaudio_NES/: audiocommon.h  audiostruct.h
include/libforest/: gbi_extensions.h
pc/: CMakeLists.txt  DOCUMENTATION.md
pc/assets/: app.rc
pc/cmake/: compile_defs.cmake  dependencies.cmake  dolphin.cmake  fixnes.cmake  game.cmake  rainfall.cmake
pc/include/: pc_disc.h  pc_platform.h  pc_settings.h
pc/include/input/: pc_pad.h
pc/include/menus/: pc_menu_util.h  pc_pause_menu.h  pc_settings_menu.h
pc/include/os/: pc_platform.h
pc/include/pc_gx/: gx_rainfall_host.h  gx_state.h  gx_texture.h  rainfall_compat.h
pc/include/rainfall/platform/: pc.h
pc/include/render/: pc_gbi_ptr.h  pc_renderer.h  pc_texture_pack.h
pc/include/settings/: pc_keybindings.h  pc_settings.h
pc/include/utility/: pc_assets.h  pc_disc.h
pc/res/: app.rc
pc/scripts/: dump_japan_msgs.py  enum_forest_arc.py  gen_japan_font.py  gen_runtime_assets.py  inspect_msgbin.py  rainfall_bisect.sh
pc/src/: pc_assets.c  pc_dvd.c  pc_gbi_runtime.c  pc_gx.c  pc_gx_texture.c  pc_japan_msg.c  pc_m_card.c  pc_main.c  pc_os.c  pc_pad.c  pc_settings.c  pc_settings_menu.c  pc_vi.c
pc/src/audio/: pc_audio.c
pc/src/input/: pc_mouse.c  pc_pad.c  pc_typing.c
pc/src/menus/: pc_menu_util.c  pc_model_viewer.c  pc_pause_menu.c  pc_settings_menu.c  pc_text_draw.c
pc/src/os/: pc_aram.c  pc_card.c  pc_m_card.c  pc_os.c  pc_platform_events.c  pc_save_bswap.c  pc_stubs.c  pc_stubs_cpp.cpp
pc/src/render/: gx_pc.cpp  pc_bc7.cpp  pc_gx.c  pc_gx_host.c  pc_gx_tev.c  pc_gx_texture.c  pc_renderer.cpp  pc_texture_pack.c  pc_vi.c
pc/src/settings/: pc_keybindings.c  pc_settings.c
pc/src/utility/: pc_assets.c  pc_disc.c  pc_dvd.c  pc_japan_msg.c  pc_misc.c  pc_nes_fixnes.c
pc/tools/: extract_japan_disc.py  gen_japan_font.py  gen_runtime_assets.py
src/: c_keyframe.c  famicom_emu.c  game.c  graph.c
src/actor/: ac_airplane.c  ac_animal_logo.c  ac_ant.c  ac_ball.c  ac_bee.c  ac_boat_demo_move.c_inc  ac_boat_move.c_inc  ac_br_shop_move.c_inc  ac_bridge_a.c  ac_buggy_move.c_inc  ac_conveni_move.c_inc  ac_cottage.c  ac_count02_draw.c_inc  ac_count02_move.c_inc  ac_countdown_move.c_inc  ac_depart_move.c_inc  ac_douzou_move.c_inc  ac_effectbg.c  ac_event_manager.c  ac_fallSESW_move.c_inc  ac_fallS_move.c_inc  ac_field_draw.c  ac_fuusen.c  ac_garagara.c  ac_groundhog_control.c  ac_gyo_kage.c  ac_gyo_release.c  ac_gyoei_draw.c_inc  ac_gyoei_move.c_inc  ac_house_clock.c  ac_house_goki.c  ac_house_move.c_inc  ac_ins_amenbo.c  ac_ins_batta.c  ac_ins_chou.c  ac_ins_dango.c  ac_ins_goki.c  ac_ins_hitodama.c  ac_ins_hotaru.c  ac_ins_ka.c  (+59 more)
src/actor/npc/: ac_countdown_npc1_talk.c_inc  ac_hanabi_npc0_talk.c_inc  ac_hanami_npc1_talk.c_inc  ac_npc.c  ac_npc2_action.c_inc  ac_npc2_move.c_inc  ac_npc2_think.c_inc  ac_npc_act_chase_insect.c_inc  ac_npc_act_get.c_inc  ac_npc_act_greeting.c_inc  ac_npc_act_into_house.c_inc  ac_npc_act_leave_house.c_inc  ac_npc_act_pitfall.c_inc  ac_npc_act_react_tool.c_inc  ac_npc_act_trans.c_inc  ac_npc_action.c_inc  ac_npc_anime.c_inc  ac_npc_conv_master_move.c_inc  ac_npc_ctrl.c_inc  ac_npc_depart_master_move.c_inc  ac_npc_effect.c_inc  ac_npc_guide2_move.c_inc  ac_npc_guide_move.c_inc  ac_npc_head.c_inc  ac_npc_mamedanuki_move.c_inc  ac_npc_move.c_inc  (+13 more)
src/bg_item/: bg_item_common.c_inc
src/effect/: ef_ami_mizu.c  ef_ase_ch.c  ef_break_axe.c  ef_bush_happa.c  ef_bush_yuki.c  ef_car_light.c  ef_clacker.c  ef_coin.c  ef_dig_hole.c  ef_dig_mud.c  ef_douzou_light.c  ef_doyon.c  ef_dust.c  ef_effect_control.c  ef_effect_lib.c  ef_flash.c  ef_footprint.c  ef_furo_yuge.c  ef_gimonhu.c  ef_goki.c  ef_ha.c  ef_halloween_smoke.c  ef_hanabi_botan1.c  ef_hanabi_botan2.c  ef_hanabi_dummy.c  ef_hanabi_hoshi.c  ef_hanabi_set.c  ef_hanabi_switch.c  ef_hanabi_yanagi.c  ef_hanabira.c  ef_hirameki_den.c  ef_impact_star.c  ef_kagu_happa.c  ef_kamifubuki.c  ef_kantanhu.c  ef_kasamizu.c  ef_kasamizutama.c  ef_kaze.c  ef_kaze_happa.c  ef_kigae.c  (+57 more)
src/furniture/: ac_ike_jny_syon01.c  ac_ike_k_count01.c  ac_ike_kama_danro01.c  ac_ike_tent_fire01.c  ac_ike_tent_fire02.c  ac_iku_mario_coin.c  ac_iku_mario_hatena.c  ac_iku_mario_star.c  ac_iku_turkey_TV.c  ac_kon_snowtv.c  ac_nog_fan01.c  ac_nog_nabe.c  ac_nog_shrine.c  ac_nog_sprinkler.c  ac_radio_test.c  ac_sugi_barbecue.c  ac_sugi_kpool.c  ac_sugi_torch.c  ac_sum_roboclk.c  ac_sum_roboconpo.c  ac_sum_tv01.c  ac_sum_tv02.c  ac_tak_ham1.c  ac_tak_ice.c  ac_tak_lion.c  ac_tak_stew.c  ac_yaz_candle.c  ac_yaz_mario_flower.c
src/game/: m_actor.c  m_address_ovl.c  m_banti.c  m_board_ovl.c  m_calendar_ovl.c  m_camera2.c  m_catalog_ovl.c  m_choice.c  m_choice_main_appear.c_inc  m_choice_main_disappear.c_inc  m_choice_main_normal.c_inc  m_collision_obj.c  m_cpmail_ovl.c  m_cporiginal_ovl.c  m_cpwarning_ovl.c  m_debug_mode.c  m_demo.c  m_design_ovl.c  m_diary_ovl.c  m_editEndChk_ovl.c  m_event.c  m_fbdemo_fade.c  m_fbdemo_triforce.c  m_fbdemo_wipe1.c  m_font_main.c_inc  m_hand_ovl.c  m_handbill.c  m_inventory_ovl.c  m_kankyo.c  m_kankyo_weather.c_inc  m_lib.c  m_malloc.c  m_map_ovl.c  m_mscore_ovl.c  m_msg.c  m_msg_appear.c_inc  m_msg_cursol.c_inc  m_msg_disappear.c_inc  m_msg_main.c_inc  m_msg_normal.c_inc  (+48 more)
src/system/: sys_matrix.c
(+52 files in other folders)
